Changelog
=========

12.4.dev0 - (unreleased)
------------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

12.3 - (2017-05-15)
-------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

12.2 - (2017-04-24)
-------------------
* Change: updated package information
  [eduard-fironda]

12.1 - (2017-03-20)
-------------------
* Change: Latest version widget returns the MOST recent version
  of the object that MATCH the search criteria.
  [avoinea refs #83219]
* Bug fix: Fix faceted performance regression introduced
  by latest version widget in ticket #75032
  [avoinea refs #83219]

12.0 - (2017-02-21)
-------------------
* Feature: Remove `Tags` section within PDF export
  [avoinea refs #81054]

11.9 - (2017-02-14)
-------------------
* Cleanup: Remove `getProcessor` metadata from portal_catalog
  [voineali refs #80119]
* Feature: geotags, temporal coverage and themes display
  alligned with tags style
  [alecghica refs #81054]

11.8 - (2017-01-30)
-------------------
* Bug fix: fixed obligations vocabulary encoding issues
  [alecghica refs #80208]

11.7 - (2016-12-19)
-------------------
* Bug fix: last version adapter now takes into consideration
  that version_id might be of wrong format
  [ichim-david refs #75388]

11.6 - (2016-11-21)
-------------------
* Change: cleanup permalink macros
  [alecghica refs #76194]

11.5 - (2016-11-14)
-------------------
* Feature: permalinks logic moved under eea.versions package
  [alecghica refs #76194]
* Feature: permalink feature is now generic, ds_resolveuid can be
  called now from any context
  [alecghica refs #76194]

11.4 - (2016-09-13)
-------------------
* Change: add versionId also as title for eea_permalink_objects
  [ichim-david refs #76165]
* Change: removed hardcoded inline style of selectautocomplete_widget in
  order to avoid having the dataset provider select span over the edit
  content area
  [ichim-david]