@@ -50,7 +50,6 @@ setup(name=name,
           'eea.workflow',
           'eea.geotags',
           'five.intid',
-          'plone.app.async',
           'eea.indicators',
           'collective.quickupload',
           'eventlet',
